test/files/neg/ref-checks.check
ref-checks.scala:9: error: type arguments [Int] do not conform to trait Chars's type parameter bounds [A <: CharSequence]
  @ann[Chars[Int]] val x = 42
                       ^
ref-checks.scala:10: error: type arguments [Double] do not conform to trait Chars's type parameter bounds [A <: CharSequence]
  val y: Two[Chars[Long] @uncheckedBounds, Chars[Double]] = null
         ^
ref-checks.scala:11: error: type arguments [X forSome { type X <: Int }] do not conform to trait Chars's type parameter bounds [A <: CharSequence]
  def z: Chars[X forSome { type X <: Int }] = null
         ^
ref-checks.scala:18: warning: type DeprecatedAlias in object Test is deprecated
    case _: DeprecatedAlias =>
            ^
ref-checks.scala:19: warning: class DeprecatedClass in object Test is deprecated
    case _: DeprecatedClass =>
            ^
2 warnings
3 errors
